 * Fix #3022: Add user to project form lists disabled users.
 * Fix #3047: Manually assigned developers cannot resolve in All Projects view.
 * Fix #3050: Setting Assigned To to null causes Status to change to assigned
 * Fix #3055: (Non-email) URLs containing '@' characters are now linked correctly.
 * Fix #3058: Clicking on view_all_bug_page.php results in 'file download' popup.
	
2003.02.26  -  0.18.0a3

 * Behaviour change: allow bug IDs to get replaced when they are preceeded by any character that is not a letter, a number, or an underscore instead of requiring them to be preceeded by whitespace
 * Enhancement: Added "Hide resolved" functionality to bug list page.
 * Enhancement: When an enumeration is not found, display @<enumid>@ instead of @null@.
 * Enhancement: Added file type icons next to project documents and bug file attachments.  Also provided a set of standard icons.
 * Enhancement: Added a section to the bug view pages that lists the users that are monitoring the current bug.
 * Enhancement: Improved the layout of the "Send a reminder" form.
 * Fix: META redirects were not XHTML-compliant
 * Fix: $g_lang_current was not available to custom_strings_inc.php
 * Fix: reduced the executed number of queries throughout the interface
 * Fix: improved handling of bad cookies (you now get a chance to log in again)
 * Fix: Added the removal of invalid history entries that were added due to escaping errors to the string escaping fixes.
 * Fix: Improve speed of actions that trigger email sends by reducing the number of queries by 200x (20,000%). Queries when sending emails are now linear to the number of users receiving the email instead of the number of users in the system.
 * Fix: error deleting bug files fixed
 * Fix: display logical filename rather than file system filename for project documents in project document edit page.
 * Fix #838:  Show attached images as images instead of links.